--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<!-- ==============================
-    Project:        Metronic "Aircv" Frontend Freebie - Responsive HTML Template Based On Twitter Bootstrap 3.3.4
-    Version:        1.0
-    Author:         KeenThemes
-    Primary use:    Corporate, Business Themes.
-    Email:          support@keenthemes.com
-    Follow:         http://www.twitter.com/keenthemes
-    Like:           http://www.facebook.com/keenthemes
-    Website:        http://www.keenthemes.com
-    Premium:        Premium Metronic Admin Theme: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
-================================== -->
 <html lang="en" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
@@ -87,9 +76,10 @@
                     <div class="col-sm-6">
                         <div class="promo-block-divider">
                             <h1 class="promo-block-title">Abdul <br/> Kafoor</h1>
-                            <p class="promo-block-text">Web Designer &amp; Front-end Developer</p>
+                            <p class="promo-block-text">Web Developer</p>
                         </div>
                         <ul class="list-inline">
+                            <li><a href="https://www.linkedin.com/in/abdul-kafoor-438081127/" class="social-icons"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="http://fb.com/abdul.kafoor.333" class="social-icons"><i class="icon-social-facebook"></i></a></li>
                             <li><a href="http://twitter.com" class="social-icons"><i class="icon-social-twitter"></i></a></li>
                             <li><a href="http://instagram.com" class="social-icons"><i class="icon-social-instagram"></i></a></li>
