--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ So you'll learn to make designs using rectangles and circles! These are so easy 
                                 </div>
                                 <div class="col-md-3 col-xs-6">
                                     <h5>Web</h5>
-                                    <a href="http://www.markkafoor.com/">markkafoor.com</a>
+                                    <a href="http://www.abdulkafoor.tk/">abdulkafoor.com</a>
                                 </div>
                             </div>
                         </div>
@@ -387,7 +387,7 @@ So you'll learn to make designs using rectangles and circles! These are so easy 
                         <img class="footer-logo" src="img/k-logo.png" alt="Aircv Logo">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="#">AK</a> Powered by: <a class="fweight-700" href="http://www.markkafoor.com/">markkafoor.com</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="#"></a> Powered by: <a class="fweight-700" href="http://www.abdulkafoor.tk/">www.abdulkafoor.com</a></p>
                     </div>
                 </div>
                 <!--// end row -->
